# neural

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  mypy.ini  neural_architecture_flowchart.html  neural_roadmap_timeline.html  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
.sisyphus/: ralph-loop.local.md
docs/: AGENTS.md  gil-transcript-blueprint.md  gil-transcript-evaluation.md  gil-transcript-tech-spec.md  phase-two-roadmap.md
docs/adr/: 001-retrieval-first.md  002-citation-first-web-chatbot.md
evals/: gil_queries.json
gil/transcripts/: 100_Point_Record_Clippers_Turnaround_Kawhi_AllNBA.txt  Adrian_Griffin_Gets_FIRED_&_Joel_Embiid_Drops_70_Points.txt  Andre_Iguodala_and_Evan_Turner_GET_REAL_With_Gilbert_Arenas.txt  Another_Celtics_Collapse_STUNS_The_Gils_Arena_Crew.txt  Another_NBA_BLOCKBUSTER_Trade_Shakes_Up_Gils_Arena.txt  Ant_Mans_HOT_STREAK_&_Tatums_Return_DIVIDES_Gils_Arena.txt  Anthony_Davis_&_Harden_TRADED_Shakes_Up_Gils_Arena.txt  Austin_Reaves_CARRYING_The_Los_Angeles_Lakers_Fires_Up_Gils_Arena.txt  Bam_Adebayo_83_Points_Surpasses_Kobe.txt  Bam_Adebayos_83_Points_LIGHT_UP_Gils_Arena.txt  Baron_Davis_Breaks_Down_NBA_Finals_Game_5_With_Gils_Arena.txt  Baron_Davis_UNLEASHES_His_NBA_Takes_on_Gils_Arena.txt  Bomani_Jones_Shares_His_Legendary_Takes_With_Gils_Arena.txt  Bronny_James_Best_Game_Ever_BLOWS_UP_Gils_Arena!!.txt  Bronny_James_COOKING_Summer_League_FIRES_UP_Gils_Arena.txt  Bronny_James_G_League_Demotion_BLOWS_UP_Gils_Arena.txt  Bronny_James_Has_Finally_PROVEN_He_Belongs_In_The_NBA!!.txt  Bronny_James_Summer_League_Breakout_FIRES_UP_Gils_Arena.txt  Cade_Cunningham_Collapsed_Lung_Lakers_Hot.txt  Chet_Holmgrens_INSANE_New_Deal_DIVIDES_Gils_Arena.txt  Chris_Paul_SENT_HOME_By_The_Clippers_STUNS_Gils_Arena.txt  Coach_Thibs_FIRED_By_The_Knicks_STUNS_Gils_Arena!!.txt  Dalton_Knechts_MONSTER_GAME_Gets_Gils_Arena_Hyped.txt  Danny_Green_Breaks_Down_The_NBA_Playoffs_With_Gils_Arena.txt  Draymond_&_The_Warriors_Sent_A_HOSTILE_Message_To_The_NBA.txt  Draymond_Greens_Stomp_Suspension_IS_CRAZY.txt  Dwight_Howard_Enters_Gils_Arena_To_Discuss_His_NBA_Career.txt  Game_One_Of_The_NBA_Finals_Will_Be_A_Blowout!!!!.txt  Giannis_&_The_Bucks_Slow_Start_DESTROYS_Gils_Arena.txt  Giannis_Going_Down_With_Injury_CHANGES_Everything!!.txt  Gilbert_Arenas_Applauds_Zion_Williamson.txt  Gilbert_Arenas_DESTROYS_the_80s.txt  Gilbert_Arenas_DOESNT_TRUST_Golden_State.txt  Gilbert_Arenas_HATING_on_Wemby_BLOWS_UP_Gils_Arena.txt  Gilbert_Arenas_Hosts_A_Funeral_For_Cemetery_Larry.txt  (+233 more)
neural/: AGENTS.md  __init__.py  chunk_enrichment.py  chunking.py  embeddings.py  intro_parser.py  metadata_types.py  openrouter.py  reranking.py  retrieval.py  vector_index.py
scripts/: AGENTS.md  build_transcript_index.py  cluster_transcript_chunks.py  evaluate_retrieval.py  extract_metadata.py  query_transcripts.py  report_ingestion_status.py  scrape_podscripts.py
src/webapp/: main.py  (+1 more)
tests/: AGENTS.md  test_answer_markup.py  test_chat_prompt.py  test_chunk_enrichment.py  test_chunking.py  test_cluster_topics.py  test_corpus_loader.py  test_embeddings.py  test_evaluation.py  test_glossary_extractor.py  test_hybrid_retrieval.py  test_index_build.py  test_ingestion_status.py  test_intro_parser.py  test_metadata_types.py  test_openrouter.py  test_parse_episode_list.py  test_parse_transcript_page.py  test_reranking.py  test_retrieval.py  test_source_manifest.py  test_vector_index.py  test_webapp.py
webapp/: AGENTS.md  __init__.py  main.py
(+29 files in other folders)
