[project]
name = "neural"
version = "0.1.0"
description = "Utilities for scraping and storing Gil's Arena transcripts."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "requests",
    "tqdm",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.src]
include = ["scripts"]

[tool.ty.environment]
python = ".venv"