[project]
name = "neural"
version = "0.1.0"
description = "Utilities for scraping, indexing, and querying Gil's Arena transcripts."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "numpy>=2.4.3",
    "python-dotenv>=1.0.0",
    "requests",
    "sentence-transformers>=5.3.0",
    "tqdm",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["neural", "scripts", "tests", "webapp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.src]
include = ["neural", "scripts", "webapp"]

[tool.ty.environment]
python = ".venv"

[tool.mypy]
python_version = "3.12"

# Satisfy editors running mypy without types-* installed for these libs.
[[tool.mypy.overrides]]
module = ["requests", "requests.*", "urllib3", "urllib3.*", "tqdm", "tqdm.*"]
ignore_missing_imports = true
