[project]
name = "neural"
version = "0.1.0"
description = "Utilities for scraping, indexing, and querying Gil's Arena transcripts."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "markdown>=3.10.2",
    "nh3>=0.3.3",
    "numpy>=2.4.3",
    "python-dotenv>=1.0.0",
    "requests",
    "sentence-transformers>=5.3.0",
    "tqdm",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=7.1.0",
    "ruff",
    "ty",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", ".", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ty.src]
include = ["src", "scripts"]
exclude = ["gil/transcripts/**", "data/**", "tests/**"]

[tool.ty.environment]
python = ".venv"
python-version = "3.12"

[tool.ty.analysis]
allowed-unresolved-imports = [
    "markdown.*",
    "nh3.*",
    "faiss.*",
    "sentence_transformers.*",
    "bs4.*",
    "beautifulsoup4.*",
    "fastapi.*",
    "jinja2.*",
    "uvicorn.*",
    "tqdm.*",
    "requests.*",
    "urllib3.*",
]

[tool.ty.terminal]
output-format = "concise"

[tool.pyright]
include = ["src", "scripts", "tests"]
extraPaths = ["src", "scripts"]
venvPath = "."
venv = ".venv"

[tool.mypy]
python_version = "3.12"

# Satisfy editors running mypy without types-* installed for these libs.
[[tool.mypy.overrides]]
module = ["requests", "requests.*", "urllib3", "urllib3.*", "tqdm", "tqdm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["markdown", "markdown.*", "nh3", "nh3.*"]
ignore_missing_imports = true
